fix no-popup modal overflow
This fixes a bug where some elements(like buffer) may be invisible when non-popup modal is active.

--- a/src/main/webapp/static/sc2.css
+++ b/src/main/webapp/static/sc2.css
@@ -870,7 +870,7 @@ body.theme-dark :fullscreen, body.theme-dark #team-buffer
 
 body.modal-open.modal-open-no-popup
 {
-    overflow: auto;
+    overflow: initial;
     padding: 0 !important;
 }
 
